reinder trivia working

--- a/.ask/config
+++ b/.ask/config
@@ -1,10 +1,10 @@
 {
   "deploy_settings": {
     "default": {
-      "skill_id": "",
+      "skill_id": "amzn1.ask.skill.de1d46d9-3285-429f-ad64-3701fcd4fbe9",
       "was_cloned": false,
       "merge": {
-        "skillManifest": {
+        "manifest": {
           "apis": {
             "custom": {
               "endpoint": {
